# CCGS

./: ChangLogs.txt  README.md
src/: .sconsign.dblite  AUTHORS  CMakeLists.txt  Makefile  Makefile.sonto  SConstruct  ccgs  ccgs.cpp  ccgs_atomic.h  ccgs_common.cpp  ccgs_common_buffer.h  ccgs_common_queue.h  ccgs_configure.cpp  ccgs_configure.h  ccgs_configure.h.bk  ccgs_db_connection.cpp  ccgs_db_connection.h  ccgs_error.c  ccgs_error.h  ccgs_event_loop.cpp  ccgs_event_loop.h  ccgs_manager.cpp  ccgs_manager.h  ccgs_mem_pool.h  ccgs_memcached.cpp  ccgs_memcached.h  ccgs_module.cpp  ccgs_module.h  ccgs_protocol_handler.h  ccgs_recv_task.cpp  ccgs_recv_task.h  ccgs_send_task.cpp  ccgs_send_task.h  ccgs_singleton.cpp  ccgs_singleton.h  ccgs_thread_mutex.h  ccgs_thread_pool.cpp  ccgs_thread_pool.h  ccgs_thread_task.h  ccgs_utils.c  (+4 more)
src/devel/: CCGS_common.h  CCGS_handbook.txt  CCGS_module.h  CCGS_proto.h  Makefile.sample  sample.c
src/doc/: .~lock.CCGS系统协议文档.doc#  CCGS系统协议文档.doc  CCGS表格 (修改v1).ods  CCGS表格.ods
src/libst/: Makefile  SThash.c  SThash.h  STnotification.h
src/message/: readme
src/message/protos/: proto.pb.cc  proto.pb.h
src/module/: ccgs_mod.h  module.h  sample.c
src/protos/: proto.proto
test/: Makefile  build  gtest_main.cc  utest_arithmetic_expressions.cc  utest_client  utest_client.c  utest_common_buffer.cc  utest_configure.cc  utest_db_connection.cc  utest_lib_event.cc  utest_mem_pool.cc  utest_multi_client.c
